添加了动画文件在内的文件。

--- a/app/src/main/res/layout/activity_sliding_toast.xml
+++ b/app/src/main/res/layout/activity_sliding_toast.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/holo_green_light"
     tools:context="com.lindroid.slidingtoast.SlidingToastActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <include layout="@layout/sliding_toast" />
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:onClick="showSlidingToast"
+        android:text="显示SlidingToast"
+        android:textAllCaps="false" />
+
+</RelativeLayout>
