增加了一些注释，完成了博客。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content" />
 
     <Button
+        android:textAllCaps="false"
         android:onClick="croutonClick"
         android:text="Crouton使用"
         android:layout_width="match_parent"
