--- a/app/src/main/res/layout/activity_crouton.xml
+++ b/app/src/main/res/layout/activity_crouton.xml
@@ -42,14 +42,14 @@
     <Button
         android:textAllCaps="false"
         android:id="@+id/btn_cfg"
-        android:layout_above="@+id/btn_custom"
+        android:layout_above="@+id/btn_style"
         android:text="修改Crouton的配置"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/btn_style"
-        android:layout_above="@+id/btn_cfg"
+        android:layout_above="@+id/btn_custom"
         android:textAllCaps="false"
         android:text="修改Crouton的样式"
         android:layout_width="match_parent"
