增加了销毁Crouton的处理。

--- a/app/src/main/res/layout/activity_crouton.xml
+++ b/app/src/main/res/layout/activity_crouton.xml
@@ -55,4 +55,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:layout_above="@+id/btn_style"
+        android:text="销毁Crouton"
+        android:id="@+id/btn_cancel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
